--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -34,7 +34,11 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
+        {% include "includes/header.html" %}
+
         {% block content %}{% endblock %}
+
+        {% include "includes/footer.html" %}
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/mysite.js' %}"></script>
